<resources>
    <string name="app_name">Baca Qur\'an</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ayah">1</string>
    <string name="ayah_arabic_indopak">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="ayah_arabic">بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="transcription">بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="ayah_latin">bismillāhir-raḥmānir-raḥīm</string>
    <string name="ayah_translation">Dengan nama Allah Yang Maha Pengasih lagi Maha Penyayang.</string>
    <string name="head_location">Makkiyah</string>
    <string name="head_surah">1</string>
    <string name="head_ayah">7 Ayat</string>
    <string name="bismillahirrahmanirrahim">bismillahirrahmanirrahim</string>
    <string name="surah_arabic">1</string>
    <string name="surah_info">Pembukaan (7 Ayat)</string>
    <string name="surah_latin">Al-Fatihah</string>
    <string name="number">1</string>
    <string name="surah">Surah</string>
    <string name="juz">Juz</string>
    <string name="bookmark">Bookmark</string>
    <string name="levenshtein_distance">Tingkat Kesalahan: 17.06%</string>
    <string name="insert">Tambah</string>
    <string name="delete">Hapus</string>
    <string name="patch_word">Anda lupa membaca \'بِسْمِ اللّٰه\' pada ayat</string>
    <string name="button_record">button record</string>
    <string name="juz_title">Juz 1</string>
    <string name="juz_content">Al-Fatihah 1 - Al-Baqarah 141</string>
    <string name="add_or_delete_bookmark">Tambah atau Hapus Bookmrk</string>
    <string name="bookmarked_at">6 hari yang lalu</string>
    <string name="bookmarked_verse">QS. Al-\'Ankabut: Ayat 69 (Juz 21)</string>
    <string name="setting">Pengaturan</string>
    <string name="find_surah">Cari Surat</string>
</resources>