<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VerseFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_woodsmoke"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/headdress_of_surah"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_head_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.63"
                    android:gravity="center"
                    android:text="@string/head_location"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_head_surah"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/arab_quran_islamic_140"
                    android:gravity="center"
                    android:text="@string/head_surah"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/text_head_ayah"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.63"
                    android:gravity="center"
                    android:text="@string/head_ayah"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_bismillah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_woodsmoke"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/image_bismillah"
                    android:layout_width="176dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/bismillahirrahmanirrahim"
                    android:src="@drawable/bismillahirrahmanirrahim"
                    tools:srcCompat="@drawable/bismillahirrahmanirrahim" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_verse"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
