<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/dark_woodsmoke">

        <TextView
            android:id="@+id/text_juz"
            android:layout_width="30dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_frame_number"
            android:gravity="center"
            android:text="@string/number"
            android:textAlignment="center"
            android:textColor="@color/persian_green"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/text_juz"
            app:layout_constraintStart_toEndOf="@+id/text_juz"
            app:layout_constraintTop_toTopOf="@+id/text_juz">

            <TextView
                android:id="@+id/text_juz_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/juz_title"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_juz_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/juz_content"
                android:textColor="@color/stonewall"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>